Test about page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<!-- || Component - Navbar responsive manu center -->
 		<nav class="navbar navbar-expand-lg bg-body navbar-responsive-menu-center">
 			<div class="container-lg navbar-rmc-container">
-				<a href="/" class="navbar-brand cursor-hs-scale navbar-rmc-brand cursor-hs-scale">
+				<a href="./" class="navbar-brand cursor-hs-scale navbar-rmc-brand cursor-hs-scale">
 					<h1 class="visually-hidden">Kindled</h1>
 					<img src="images/logo-dark.png" alt="Kindled" class="navbar-rmc-brand-img">
 				</a>
@@ -80,7 +80,7 @@
 					<ul class="navbar-nav me-auto mx-xxl-auto navbar-rmc-navbar">
 						<li class="nav-item navbar-rmc-nav-item">
 							<a class="nav-link active text-uppercase fw-semibold cfs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
-								aria-current="page" href="/">
+								aria-current="page" href="./">
 								<div class="rolling-text">Home</div>
 							</a>
 						</li>
@@ -238,7 +238,7 @@
 										while each channel has its own set of advantages, they all work best when strategically paired with
 										other channels.</p>
 									<a class="cfs-14 link-primary link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-capitalize d-inline-block ps-4 pe-2 cursor-hs-scale link-circle-bg-icon animate__animated anim-gsap"
-										href="/" data-animation="animate__fadeIn" data-js-opacity-zero><span>View All Our News</span><svg
+										href="./" data-animation="animate__fadeIn" data-js-opacity-zero><span>View All Our News</span><svg
 											class="d-inline-block ps-1" xmlns="http://www.w3.org/2000/svg" height="22"
 											viewBox="0 -960 960 960" width="22">
 											<path
@@ -299,31 +299,33 @@
 					</section>
 
 					<!-- || Component - Banner infinite roll -->
-					<div class="overflow-hidden banner-infinite-roll banner-ir-tilt-3 banner-ir-shadow-sides" data-roll-speed="60"
+					<div class="overflow-hidden position-relative z-2 py-5 banner-infinite-roll banner-ir-shadow-sides" data-roll-speed="60"
 						data-clone="true" data-scroll-trigger="true">
-						<h2 class="visually-hidden">Services</h2>
-						<div
-							class="d-flex flex-nowrap bg-body border-top border-bottom border-secondary border-opacity-25 banner-ir-roll-wr">
-							<div class="d-flex flex-nowrap flex-shrink-0 py-5 banner-ir-items-ctr">
-								<div class="flex-shrink-0 d-flex align-items-center">
-									<span class="display-3 fw-semibold me-4 me-md-5 lh-1">UI-UX Experience</span>
-									<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
-								</div>
-								<div class="flex-shrink-0 d-flex align-items-center">
-									<span class="display-3 fw-semibold me-4 me-md-5 lh-1">Web Development</span>
-									<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
-								</div>
-								<div class="flex-shrink-0 d-flex align-items-center">
-									<span class="display-3 fw-semibold me-4 me-md-5 lh-1">Digital Marketing</span>
-									<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
-								</div>
-								<div class="flex-shrink-0 d-flex align-items-center">
-									<span class="display-3 fw-semibold me-4 me-md-5 lh-1">Product Design</span>
-									<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
-								</div>
-								<div class="flex-shrink-0 d-flex align-items-center">
-									<span class="display-3 fw-semibold me-4 me-md-5 lh-1">Mobile Solutions</span>
-									<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+						<div class="banner-ir-tilt-3">
+							<h2 class="visually-hidden">Services</h2>
+							<div
+								class="d-flex flex-nowrap bg-body border-top border-bottom border-secondary border-opacity-25 banner-ir-roll-wr">
+								<div class="d-flex flex-nowrap flex-shrink-0 py-5 banner-ir-items-ctr">
+									<div class="flex-shrink-0 d-flex align-items-center">
+										<span class="display-3 fw-semibold me-4 me-md-5 lh-1">UI-UX Experience</span>
+										<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+									</div>
+									<div class="flex-shrink-0 d-flex align-items-center">
+										<span class="display-3 fw-semibold me-4 me-md-5 lh-1">Web Development</span>
+										<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+									</div>
+									<div class="flex-shrink-0 d-flex align-items-center">
+										<span class="display-3 fw-semibold me-4 me-md-5 lh-1">Digital Marketing</span>
+										<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+									</div>
+									<div class="flex-shrink-0 d-flex align-items-center">
+										<span class="display-3 fw-semibold me-4 me-md-5 lh-1">Product Design</span>
+										<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+									</div>
+									<div class="flex-shrink-0 d-flex align-items-center">
+										<span class="display-3 fw-semibold me-4 me-md-5 lh-1">Mobile Solutions</span>
+										<i class="fa-regular fa-star fa-2xl me-4 me-md-5"></i>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -895,7 +897,7 @@
 
 								<div class="col-lg-auto">
 									<a class="cfs-14 link-primary link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-capitalize d-inline-block ps-4 pe-2 cursor-hs-scale link-circle-bg-icon animate__animated anim-gsap"
-										data-animation="animate__fadeIn" data-js-opacity-zero href="/"><span>View All Our News</span><svg
+										data-animation="animate__fadeIn" data-js-opacity-zero href="./"><span>View All Our News</span><svg
 											class="d-inline-block ps-1" xmlns="http://www.w3.org/2000/svg" height="22"
 											viewBox="0 -960 960 960" width="22">
 											<path
@@ -1035,7 +1037,7 @@
 					<div
 						class="row row-cols-1 row-cols-md-auto justify-content-between align-items-center gy-3 footer-rcl-brand-row">
 						<div class="col">
-							<a class="d-inline-block cursor-hs-scale footer-rcl-logo-link" href="/">
+							<a class="d-inline-block cursor-hs-scale footer-rcl-logo-link" href="./">
 								<img class="w-100" src="./images/logo-dark.png" alt="Kindled Logo">
 							</a>
 						</div>
