Complete services page mobile view

--- a/pages/services.html
+++ b/pages/services.html
@@ -282,6 +282,254 @@
             </div>
           </section>
 
+          <!-- || Block - services-resp-cnt-img-pin (Services-responsive-content-image-pinning) -->
+          <section class="bg-white services-resp-cnt-img-pin">
+            <div class="container-fluid">
+              <div class="row gy-4 sr-cip-service-ctr">
+                <div class="col-lg-6 sr-cip-pin-wr">
+                  <div class="sr-cip-img-wr">
+                    <img class="w-100 h-100 object-fit-cover" src="../images/company/cover-design-1.jpg"
+                      alt="A cover design of spotlight pointing on floor with book cover details">
+                  </div>
+                </div>
+
+                <div class="col-lg-6 sr-cip-content-ctr">
+                  <div class="mb-3"><span class="cfs-14 fw-light text-uppercase">01. DIGITAL</span></div>
+                  <h3 class="h1 fw-semibold ls-base mb-4">Luxury Glassware.</h3>
+                  <p class="fw-light lh-md mb-4">We craft premium designs for agencies and global brands around the
+                    globe.</p>
+
+                  <ul class="list-group mb-5">
+                    <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
+                      <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
+                      <span class="lh-base">Make your business visible online.</span>
+                    </li>
+
+                    <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
+                      <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
+                      <span class="lh-base">Make your eCommerce business stand out.</span>
+                    </li>
+
+                    <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
+                      <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
+                      <span class="lh-base">Grow with your audience.</span>
+                    </li>
+                  </ul>
+
+                  <a class="d-flex flex-column align-items-center justify-content-center row-gap-2 text-primary text-decoration-none rounded-circle ms-auto me-auto link-hover-bg-border-trans cursor-hs-scale"
+                    href="./contact.html">
+                    <span class="material-icons fw-light fs-5">north_east</span>
+                    <span class="text-uppercase d-inline-block cfs-14">View Details</span></a>
+                </div>
+              </div>
+
+              <div class="row gy-4 sr-cip-service-ctr">
+                <div class="col-lg-6 sr-cip-pin-wr">
+                  <div class="sr-cip-img-wr">
+                    <img class="w-100 h-100 object-fit-cover" src="../images/company/pamphlet-design.jpg"
+                      alt="A cover design of spotlight pointing on floor with book cover details">
+                  </div>
+                </div>
+
+                <div class="col-lg-6 sr-cip-content-ctr">
+                  <div class="mb-3"><span class="cfs-14 fw-light text-uppercase">02. MARKETING</span></div>
+                  <h3 class="h1 fw-semibold ls-base mb-4">Brand Identity.</h3>
+                  <p class="fw-light lh-md mb-4">We craft premium designs for agencies and global brands around the
+                    globe.</p>
+
+                  <ul class="list-group mb-5">
+                    <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
+                      <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
+                      <span class="lh-base">Make your business visible online.</span>
+                    </li>
+
+                    <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
+                      <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
+                      <span class="lh-base">Make your eCommerce business stand out.</span>
+                    </li>
+
+                    <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
+                      <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
+                      <span class="lh-base">Grow with your audience.</span>
+                    </li>
+                  </ul>
+
+                  <a class="d-flex flex-column align-items-center justify-content-center row-gap-2 text-primary text-decoration-none rounded-circle ms-auto me-auto link-hover-bg-border-trans cursor-hs-scale"
+                    href="./contact.html">
+                    <span class="material-icons fw-light fs-5">north_east</span>
+                    <span class="text-uppercase d-inline-block cfs-14">View Details</span></a>
+                </div>
+              </div>
+
+              <div class="row gy-4 sr-cip-service-ctr">
+                <div class="col-lg-6 sr-cip-pin-wr">
+                  <div class="sr-cip-img-wr">
+                    <img class="w-100 h-100 object-fit-cover" src="../images/company/cover-design-2.jpg"
+                      alt="A cover design of spotlight pointing on floor with book cover details">
+                  </div>
+                </div>
+
+                <div class="col-lg-6 sr-cip-content-ctr">
+                  <div class="mb-3"><span class="cfs-14 fw-light text-uppercase">03. DESIGN</span></div>
+                  <h3 class="h1 fw-semibold ls-base mb-4">Roseville Pottery.</h3>
+                  <p class="fw-light lh-md mb-4">We craft premium designs for agencies and global brands around the
+                    globe.</p>
+
+                  <ul class="list-group mb-5">
+                    <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
+                      <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
+                      <span class="lh-base">Make your business visible online.</span>
+                    </li>
+
+                    <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
+                      <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
+                      <span class="lh-base">Make your eCommerce business stand out.</span>
+                    </li>
+
+                    <li class="list-group-item bg-white border-0 d-flex align-items-center column-gap-1 pe-0">
+                      <span class="material-icons fs-6 fw-bold">subdirectory_arrow_right</span>
+                      <span class="lh-base">Grow with your audience.</span>
+                    </li>
+                  </ul>
+
+                  <a class="d-flex flex-column align-items-center justify-content-center row-gap-2 text-primary text-decoration-none rounded-circle ms-auto me-auto link-hover-bg-border-trans cursor-hs-scale"
+                    href="./contact.html">
+                    <span class="material-icons fw-light fs-5">north_east</span>
+                    <span class="text-uppercase d-inline-block cfs-14">View Details</span></a>
+                </div>
+              </div>
+            </div>
+          </section>
+
+
+          <!-- || Block - Services text img cols -->
+          <section class="services-text-img-cols services-tic-services">
+            <div class="container">
+              <h3 class="visually-hidden">Services</h3>
+
+              <div class="row gy-5 gx-xl-5 justify-content-center">
+                <div class="col-lg-6 col-xl-5">
+                  <div class="mb-3">
+                    <span
+                      class="cfs-12 text-uppercase d-inline-block border border-secondary px-4 py-2 rounded-pill ls-normal fw-medium"
+                      aria-hidden="true">Services</span>
+                  </div>
+
+                  <p class="fw-light text-secondary lh-md services-tic-desc-para">We help you to go online and increase
+                    your conversion rate Better design for your digital products.</p>
+
+                  <ol class="ps-0 me-lg-5 services-tic-ol">
+                    <li class="fw-medium mb-2 pb-3 services-tic-li"><span class="services-tic-li-text">UI/UX
+                        Design</span></li>
+                    <li class="fw-medium mb-2 pb-3 services-tic-li"><span class="services-tic-li-text">Branding</span>
+                    </li>
+                    <li class="fw-medium mb-2 pb-3 services-tic-li"><span
+                        class="services-tic-li-text">Development</span></li>
+                    <li class="fw-medium mb-2 pb-3 services-tic-li"><span class="services-tic-li-text">Marketing</span>
+                    </li>
+                  </ol>
+                </div>
+
+                <div class="col-lg-6">
+                  <div class="position-relative">
+                    <div class="services-tic-img-wr">
+                      <img class="w-100 h-100 object-fit-cover" src="../images/company/women-art.jpg"
+                        alt="Illustration of a women laughing">
+                    </div>
+
+                    <div class="position-absolute left-0 bottom-0 card-lead-icon-bg services-tic-card">
+                      <div class="mb-4 pb-2 card-lib-icon-wr"><img class="w-100"
+                          src="../images/company/company-icon1.png" alt="Icon 1">
+                      </div>
+
+                      <p class="text-secondary fw-light lh-md mb-4 pb-2">We are a creative studio specializing in
+                        design,
+                        development and strategy many different skills and disciplines in the production of all web.
+                      </p>
+
+                      <a class="text-capitalize d-inline-block text-primary cfs-14 p-1 link-underline-primary link-underline-opacity-0 link-underline-opacity-100-hover card-lib-link cursor-hs-scale"
+                        href="./pages/services.html"><span>Read More</span>
+                        <i class="fa-solid fa-arrow-right-long card-lib-link-icon"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <!-- || Block - Service features aic ( accordian image component) -->
+          <section class="bg-white service-features-aic sf-aic-services">
+            <div class="container">
+              <div class="row justify-content-around align-items-start gy-4">
+
+                <!-- || Component - Image overlap tile bar -->
+                <div class="col-lg-5">
+                  <h3 class="cfs-14 fw-light ls-wide animate__animated anim-gsap" data-animation="animate__fadeInUp"
+                    data-js-opacity-zero data-animation-offset="100">FAQ.</h3>
+                </div>
+
+                <div class="col-lg-5">
+                  <h3 class="col-md-8 col-lg-12 h1 fw-semibold lh-base mb-5 anim-swipe-in-tb anim-gsap"
+                    data-animation="anim-si-tb-animate">
+                    Watch the creative process behind our digital marketing</h3>
+
+                  <!-- || Component - Accordion anim fade in up -->
+                  <div class="accordion accordion-flush" id="accAnimFIU">
+                    <div class="accordion-item mb-3 bg-white animate__animated anim-gsap" data-animation="animate__fadeInUp"
+                      data-js-opacity-zero>
+                      <h4 class="accordion-header">
+                        <button class="accordion-button collapsed ps-0 cfs-18 fw-medium bg-white acc-anim-fiu-btn" type="button"
+                          data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
+                          aria-controls="collapseOne">
+                          The Power of Influencer Marketing
+                        </button>
+                      </h4>
+                      <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accAnimFIU">
+                        <div class="accordion-body ps-0 cfs-14 fw-light text-secondary lh-md">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit blanditiis impedit.
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="accordion-item mb-3 bg-white animate__animated anim-gsap animate__delay-1s"
+                      data-animation="animate__fadeInUp" data-js-opacity-zero>
+                      <h4 class="accordion-header">
+                        <button class="accordion-button collapsed ps-0 cfs-18 fw-medium bg-white acc-anim-fiu-btn" type="button"
+                          data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                          aria-controls="collapseTwo">
+                          Unique and Influential Design
+                        </button>
+                      </h4>
+                      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accAnimFIU">
+                        <div class="accordion-body ps-0 cfs-14 fw-light text-secondary lh-md">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit blanditiis impedit.
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="accordion-item bg-white animate__animated anim-gsap animate__delay-1s"
+                      data-animation="animate__fadeInUp" data-js-opacity-zero>
+                      <h4 class="accordion-header">
+                        <button class="accordion-button collapsed ps-0 cfs-18 fw-medium bg-white acc-anim-fiu-btn" type="button"
+                          data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                          aria-controls="collapseThree">
+                          We Build and Activate Brands
+                        </button>
+                      </h4>
+                      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accAnimFIU">
+                        <div class="accordion-body ps-0 cfs-14 fw-light text-secondary lh-md">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit blanditiis impedit.
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </section>
+
           <!-- || Block - Lead parallax bg sp (sides padding) -->
           <section class="lead-parallax-bg-sp">
             <div class="container position-relative me-0 lead-pbg-sp-parallax-ctr">
