Complete services page md view

--- a/pages/about.html
+++ b/pages/about.html
@@ -1068,7 +1068,7 @@
                 </div>
 
                 <div class="col-lg-4">
-                  <a class="z-1 d-flex flex-column align-items-center justify-content-center row-gap-2 text-primary text-decoration-none rounded-circle ms-auto me-auto link-hover-bg-border-trans cursor-hs-scale"
+                  <a class="position-relative z-1 d-flex flex-column align-items-center justify-content-center row-gap-2 text-primary text-decoration-none rounded-circle ms-auto me-auto link-hover-bg-border-trans cursor-hs-scale"
                     href="./contact.html">
                     <span class="material-icons fw-light fs-5">north_east</span>
                     <span class="text-uppercase d-inline-block cfs-14">Get
