--- a/pages/services.html
+++ b/pages/services.html
@@ -284,7 +284,7 @@
 
           <!-- || Block - services-resp-cnt-img-pin (Services-responsive-content-image-pinning) -->
           <section class="bg-white services-resp-cnt-img-pin">
-            <div class="container-fluid">
+            <div class="container-fluid sr-cip-container">
               <div class="row gy-4 sr-cip-service-ctr">
                 <div class="col-lg-6 sr-cip-pin-wr">
                   <div class="sr-cip-img-wr">
@@ -316,7 +316,7 @@
                     </li>
                   </ul>
 
-                  <a class="d-flex flex-column align-items-center justify-content-center row-gap-2 text-primary text-decoration-none rounded-circle ms-auto me-auto link-hover-bg-border-trans cursor-hs-scale"
+                  <a class="position-relative z-1 d-flex flex-column align-items-center justify-content-center row-gap-2 text-primary text-decoration-none rounded-circle ms-auto me-auto link-hover-bg-border-trans cursor-hs-scale"
                     href="./contact.html">
                     <span class="material-icons fw-light fs-5">north_east</span>
                     <span class="text-uppercase d-inline-block cfs-14">View Details</span></a>
@@ -354,7 +354,7 @@
                     </li>
                   </ul>
 
-                  <a class="d-flex flex-column align-items-center justify-content-center row-gap-2 text-primary text-decoration-none rounded-circle ms-auto me-auto link-hover-bg-border-trans cursor-hs-scale"
+                  <a class="position-relative z-1 d-flex flex-column align-items-center justify-content-center row-gap-2 text-primary text-decoration-none rounded-circle ms-auto me-auto link-hover-bg-border-trans cursor-hs-scale"
                     href="./contact.html">
                     <span class="material-icons fw-light fs-5">north_east</span>
                     <span class="text-uppercase d-inline-block cfs-14">View Details</span></a>
@@ -392,7 +392,7 @@
                     </li>
                   </ul>
 
-                  <a class="d-flex flex-column align-items-center justify-content-center row-gap-2 text-primary text-decoration-none rounded-circle ms-auto me-auto link-hover-bg-border-trans cursor-hs-scale"
+                  <a class="position-relative z-1 d-flex flex-column align-items-center justify-content-center row-gap-2 text-primary text-decoration-none rounded-circle ms-auto me-auto link-hover-bg-border-trans cursor-hs-scale"
                     href="./contact.html">
                     <span class="material-icons fw-light fs-5">north_east</span>
                     <span class="text-uppercase d-inline-block cfs-14">View Details</span></a>
@@ -476,11 +476,11 @@
 
                   <!-- || Component - Accordion anim fade in up -->
                   <div class="accordion accordion-flush" id="accAnimFIU">
-                    <div class="accordion-item mb-3 bg-white animate__animated anim-gsap" data-animation="animate__fadeInUp"
-                      data-js-opacity-zero>
+                    <div class="accordion-item mb-3 bg-white animate__animated anim-gsap"
+                      data-animation="animate__fadeInUp" data-js-opacity-zero>
                       <h4 class="accordion-header">
-                        <button class="accordion-button collapsed ps-0 cfs-18 fw-medium bg-white acc-anim-fiu-btn" type="button"
-                          data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
+                        <button class="accordion-button collapsed ps-0 cfs-18 fw-medium bg-white acc-anim-fiu-btn"
+                          type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
                           aria-controls="collapseOne">
                           The Power of Influencer Marketing
                         </button>
@@ -495,8 +495,8 @@
                     <div class="accordion-item mb-3 bg-white animate__animated anim-gsap animate__delay-1s"
                       data-animation="animate__fadeInUp" data-js-opacity-zero>
                       <h4 class="accordion-header">
-                        <button class="accordion-button collapsed ps-0 cfs-18 fw-medium bg-white acc-anim-fiu-btn" type="button"
-                          data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                        <button class="accordion-button collapsed ps-0 cfs-18 fw-medium bg-white acc-anim-fiu-btn"
+                          type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
                           aria-controls="collapseTwo">
                           Unique and Influential Design
                         </button>
@@ -511,8 +511,8 @@
                     <div class="accordion-item bg-white animate__animated anim-gsap animate__delay-1s"
                       data-animation="animate__fadeInUp" data-js-opacity-zero>
                       <h4 class="accordion-header">
-                        <button class="accordion-button collapsed ps-0 cfs-18 fw-medium bg-white acc-anim-fiu-btn" type="button"
-                          data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                        <button class="accordion-button collapsed ps-0 cfs-18 fw-medium bg-white acc-anim-fiu-btn"
+                          type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
                           aria-controls="collapseThree">
                           We Build and Activate Brands
                         </button>
@@ -532,7 +532,7 @@
 
           <!-- || Block - Lead parallax bg sp (sides padding) -->
           <section class="lead-parallax-bg-sp">
-            <div class="container position-relative me-0 lead-pbg-sp-parallax-ctr">
+            <div class="container position-relative lead-pbg-sp-parallax-ctr">
               <div class="overflow-hidden position-absolute start-0 end-0 top-0 z-n1 lead-pbg-sp-parallax">
                 <img class="position-relative w-100 object-fit-cover lead-pbg-sp-parallax-img"
                   src="../images/company/fancy-living-room.jpg"
