Complete services page BS lg view

--- a/pages/services.html
+++ b/pages/services.html
@@ -284,16 +284,17 @@
 
           <!-- || Block - services-resp-cnt-img-pin (Services-responsive-content-image-pinning) -->
           <section class="bg-white services-resp-cnt-img-pin">
-            <div class="container-fluid sr-cip-container">
-              <div class="row gy-4 sr-cip-service-ctr">
+            <div class="container-fluid px-lg-0 sr-cip-container">
+              <div class="row gy-4 gy-lg-0 gx-lg-0 align-items-center sr-cip-service-ctr">
                 <div class="col-lg-6 sr-cip-pin-wr">
-                  <div class="sr-cip-img-wr">
-                    <img class="w-100 h-100 object-fit-cover" src="../images/company/cover-design-1.jpg"
+                  <div class="h-100 sr-cip-img-wr">
+                    <img class="w-100 h-100 object-fit-cover sr-cip-img-op-left"
+                      src="../images/company/cover-design-1.jpg"
                       alt="A cover design of spotlight pointing on floor with book cover details">
                   </div>
                 </div>
 
-                <div class="col-lg-6 sr-cip-content-ctr">
+                <div class="col-lg-6 px-lg-5 sr-cip-px-xxl-7 sr-cip-content-ctr">
                   <div class="mb-3"><span class="cfs-14 fw-light text-uppercase">01. DIGITAL</span></div>
                   <h3 class="h1 fw-semibold ls-base mb-4">Luxury Glassware.</h3>
                   <p class="fw-light lh-md mb-4">We craft premium designs for agencies and global brands around the
@@ -323,15 +324,16 @@
                 </div>
               </div>
 
-              <div class="row gy-4 sr-cip-service-ctr">
+              <div class="row gy-4 gx-lg-0 align-items-center sr-cip-service-ctr">
                 <div class="col-lg-6 sr-cip-pin-wr">
-                  <div class="sr-cip-img-wr">
-                    <img class="w-100 h-100 object-fit-cover" src="../images/company/pamphlet-design.jpg"
+                  <div class="h-100 sr-cip-img-wr">
+                    <img class="w-100 h-100 object-fit-cover sr-cip-img-op-left"
+                      src="../images/company/pamphlet-design.jpg"
                       alt="A cover design of spotlight pointing on floor with book cover details">
                   </div>
                 </div>
 
-                <div class="col-lg-6 sr-cip-content-ctr">
+                <div class="col-lg-6 px-lg-5 sr-cip-px-xxl-7 sr-cip-content-ctr">
                   <div class="mb-3"><span class="cfs-14 fw-light text-uppercase">02. MARKETING</span></div>
                   <h3 class="h1 fw-semibold ls-base mb-4">Brand Identity.</h3>
                   <p class="fw-light lh-md mb-4">We craft premium designs for agencies and global brands around the
@@ -361,15 +363,16 @@
                 </div>
               </div>
 
-              <div class="row gy-4 sr-cip-service-ctr">
+              <div class="row gy-4 gx-lg-0 align-items-center sr-cip-service-ctr">
                 <div class="col-lg-6 sr-cip-pin-wr">
-                  <div class="sr-cip-img-wr">
-                    <img class="w-100 h-100 object-fit-cover" src="../images/company/cover-design-2.jpg"
+                  <div class="position-relative h-100 sr-cip-img-wr">
+                    <img class="w-100 h-100 object-fit-cover sr-cip-img-op-left"
+                      src="../images/company/cover-design-2.jpg"
                       alt="A cover design of spotlight pointing on floor with book cover details">
                   </div>
                 </div>
 
-                <div class="col-lg-6 sr-cip-content-ctr">
+                <div class="col-lg-6 px-lg-5 sr-cip-px-xxl-7 sr-cip-content-ctr">
                   <div class="mb-3"><span class="cfs-14 fw-light text-uppercase">03. DESIGN</span></div>
                   <h3 class="h1 fw-semibold ls-base mb-4">Roseville Pottery.</h3>
                   <p class="fw-light lh-md mb-4">We craft premium designs for agencies and global brands around the
@@ -464,12 +467,12 @@
               <div class="row justify-content-around align-items-start gy-4">
 
                 <!-- || Component - Image overlap tile bar -->
-                <div class="col-lg-5">
+                <div class="col-lg-3">
                   <h3 class="cfs-14 fw-light ls-wide animate__animated anim-gsap" data-animation="animate__fadeInUp"
                     data-js-opacity-zero data-animation-offset="100">FAQ.</h3>
                 </div>
 
-                <div class="col-lg-5">
+                <div class="col-lg-7">
                   <h3 class="col-md-8 col-lg-12 h1 fw-semibold lh-base mb-5 anim-swipe-in-tb anim-gsap"
                     data-animation="anim-si-tb-animate">
                     Watch the creative process behind our digital marketing</h3>
